# ssi

./: .aiexclude  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.gemini/: context.md
.github/: copilot-instructions.md
config/: ecx_currency_map.json  settings.default.toml  settings.dev.toml  settings.local.toml.example  settings.prod.toml  wallet_allowlist.json
config/playbooks/: generic_crypto_exchange_v1.json  okdc_cluster_v1.json  phishing_login_v1.json
config/schemas/: batch_input.schema.json
docker/: Dockerfile  ssi-api.Dockerfile  ssi-job.Dockerfile  ssi-service.Dockerfile  ssi-svc.Dockerfile
docs/: README.md  api_reference.md  architecture.md  batch_scheduling.md  developer_guide.md  failure_modes.md  ops_runbook.md  playbook_authoring.md  submission_governance.md  tdd.md  tdd_ecx_integration.md  user_guide.md
scripts/: build_image.sh  campaign_runner.py  phase0_smoke.py  spike_merklemap.py
src/ssi/: __init__.py  exceptions.py
src/ssi/api/: __init__.py  app.py  ecx_routes.py  investigation_routes.py  job_routes.py  playbook_routes.py  routes.py  web.py  ws_routes.py
src/ssi/api/web_templates/: index.html  status.html
src/ssi/browser/: __init__.py  actions.py  agent.py  agent_controller.py  captcha.py  capture.py  decision_cascade.py  dom_extractor.py  dom_inspector.py  downloads.py  har_analyzer.py  inline_images.py  llm_client.py  metrics.py  navigation.py  page_analyzer.py  stealth.py  zen_manager.py
src/ssi/classification/: __init__.py  classifier.py  labels.py  prompts.py
src/ssi/cli/: __init__.py  app.py  ecx_cmd.py  investigate.py  job.py  playbook_cmd.py  settings_cmd.py  wallet_cmd.py
src/ssi/ecx/: __init__.py  correlation.py  poller.py  submission.py
src/ssi/evidence/: __init__.py  mapping.py  stix.py  storage.py
src/ssi/feedback/: __init__.py
src/ssi/identity/: __init__.py  vault.py
src/ssi/integration/: __init__.py  core_bridge.py
src/ssi/investigator/: __init__.py  orchestrator.py
src/ssi/llm/: __init__.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  retry.py
src/ssi/models/: __init__.py  action.py  agent.py  ecx.py  investigation.py  results.py  states.py
src/ssi/monitoring/: __init__.py  adapters.py  event_bus.py  guidance_poll_handler.py  http_event_sink.py
src/ssi/osint/: __init__.py  blocklist_aggregator.py  ctlog_lookup.py  dns_lookup.py  ecrimex.py  geoip_lookup.py  ghunt.py  merklemap_client.py  ssl_inspect.py  urlscan.py  virustotal.py  webarchive.py  whois_lookup.py  whoxy_reverse.py
src/ssi/osint/google/: __init__.py  auth.py  drive.py  maps.py  models.py  parsers.py  people.py
src/ssi/playbook/: __init__.py  executor.py  loader.py  matcher.py  models.py
src/ssi/providers/: __init__.py  gate.py
src/ssi/providers/sec_gemini/: __init__.py  models.py  parser.py  prompts.py  provider.py
src/ssi/reports/: __init__.py  pdf.py
src/ssi/settings/: __init__.py  config.py
src/ssi/store/: __init__.py  scan_store.py  sql.py  task_store.py
src/ssi/utils/: url_normalization.py
src/ssi/wallet/: __init__.py  allowlist.py  export.py  models.py  patterns.py
src/ssi/worker/: __init__.py  batch.py  batch_jobs.py  jobs.py  task_reporter.py
templates/: leo_report.md.j2  report.md.j2
tests/: conftest.py
tests/adhoc/: test_pdf_toc.py
tests/benchmark/: test_performance.py
tests/fixtures/: batch_manifest.json  ecx_responses.py
tests/fixtures/scam_sites/: bank_phishing.html  captcha_hcaptcha.html  captcha_recaptcha.html  captcha_turnstile.html  charity_scam.html  crypto_airdrop.html  crypto_mining.html  deposit.html  employment_scam.html  extortion.html  fake_shop.html  gov_impersonation.html  investment_platform.html  malware_download.html  marketplace_escrow.html  phishing.html  pig_butchering.html  prize_lottery.html  register.html  romance_scam.html  sms_delivery_phish.html  social_phishing.html  subscription_trap.html  survey_reward.html  tech_company_phishing.html  tech_support.html
tests/integration/: __init__.py  test_api_integration.py  test_batch_manifest.py  test_e2e_pipeline.py  test_ecx_sandbox.py  test_fixture_dom_cascade.py  test_scam_type_coverage.py  test_wallet_extraction.py
tests/unit/: test_agent_models.py  test_awh_agent.py  test_batch.py  test_batch_jobs.py  test_captcha_detection.py  test_case_enrichment.py  test_classification.py  test_core_bridge.py  test_decision_cascade.py  test_dom_extractor.py  test_downloads.py  test_dual_model_routing.py  test_ecx.py  test_ecx_correlation.py  test_ecx_feed.py  test_ecx_poller.py  test_ecx_stats.py  test_ecx_submission.py  test_event_bus.py  test_evidence_zip.py  test_guidance_poll.py  test_har_analyzer.py  test_http_event_sink.py  test_investigation_trigger.py  test_job_routes.py  test_llm_client.py  test_models.py  test_module_status.py  test_navigation.py  test_orchestrator.py  test_phase4_hardening.py  test_phase5_cli_ws.py  test_phase7_evidence_reporting.py  test_phase8b_hardening.py  test_playbook.py  test_prompt_refinement.py  test_reports.py  test_scan_store.py  test_settings.py  test_stix.py  (+5 more)
tests/unit/evidence/: test_mapping.py
tests/unit/osint/: test_blocklist_aggregator.py  test_ctlog_lookup.py  test_ghunt.py  test_merklemap_client.py  test_webarchive.py  test_whoxy_reverse.py
tests/unit/osint/google/: test_auth.py  test_scrapers.py
tests/unit/providers/: test_gate.py  test_sec_gemini.py
(+1 files in other folders)
