[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  # --- Web & API --------------------------------------------------------
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "httpx", # --- Browser automation -----------------------------------------------
  "playwright",
  "zendriver>=0.15",
  "Pillow>=10.0",
  "openpyxl>=3.1", # --- OSINT / network intel --------------------------------------------
  "python-whois",
  "dnspython", # --- LLM & AI agent ---------------------------------------------------
  "langchain",
  "langchain-ollama",
  "langchain-community", # --- Data & models ----------------------------------------------------
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.1,<3",
  "sqlalchemy>=2.0,<3", # --- Synthetic identity generation ------------------------------------
  "faker", # --- CLI --------------------------------------------------------------
  "typer[all]>=0.12.3",
  "rich", # --- Reporting & evidence ---------------------------------------------
  "jinja2",
  "markdown",
  "weasyprint",
  "pyyaml", # --- GCP (production) -------------------------------------------------
  "google-cloud-storage",
  "google-cloud-secret-manager",
  "google-cloud-aiplatform>=1.70.0,<3.0",
]
description = "Scam Site Investigator — AI-driven scam URL reconnaissance and evidence packaging."
dynamic = ["version"]
license = {file = "LICENSE"}
name = "ssi"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "ruff",
]
test = [
  "pytest",
  "pytest-mock",
  "pytest-anyio",
  "pytest-cov",
  "pip-tools",
  "pre-commit",
]

[project.scripts]
ssi = "ssi.cli.app:app"

[tool.hatch.version]
path = "VERSION.txt"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/ssi"]

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration tests (slower, may need network)",
]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
